--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <!-- El encabezado debe ir todo junto -->
     <header>
-        <div class="grid1">Logo
+        <div class="grid1">
             <div class="Top Home">Home</div> <!-- Añadir enlaces -->
             <div class="Top Menu">Menu</div>
             <div class="Top Services">Services</div>
@@ -21,7 +21,7 @@
     <main>
         <!-- Sección 1: tiene una imagen a la derecha -->
         <section>
-            <h1>Get Delicious Food<span>Instantly Delivered</span></h1> <!-- El mensaje en inglés tenía un error gramatical (¿mantener?) -->
+            <h1>Get Delicious Food<span> Instantly Delivered</span></h1> <!-- El mensaje en inglés tenía un error gramatical (¿mantener?) -->
             <p>La comida rápida al mejor precio...</p>
         </section>
         <!-- Sección 2: Tiene muchos números -->
