--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <!-- El encabezado debe ir todo junto -->
     <header>
         <div class="grid1">
-            <div class="Top Home">Home</div> <!-- Añadir enlaces -->
-            <div class="Top Menu">Menu</div>
-            <div class="Top Services">Services</div>
-            <div class="Top Contact">Contact us</div>
+            <nav class="Top Home" id="home">Home</nav> <!-- Añadir enlaces -->
+            <nav class="Top Menu" id="menu">Menu</nav>
+            <nav class="Top Services" id="services">Services</nav>
+            <nav class="Top Contact" id="contact">Contact us</nav>
             <div class="Top Search"><input type="search" placeholder="Search..."></div>
             <div class="Top Phone">+001 112 223</div>
         </div>
@@ -33,7 +33,7 @@
         </section>
         <!-- Sección 3: tiene una imagen a la derecha -->
         <section>
-            <nav>About Us</nav>
+            <nav >About Us</nav>
             <p>texto</p> <!-- Escribir párrafos -->
             <p>texto 2</p>
             <input type="button" value="Read More"> <!-- comprobar si el type es correcto -->
