--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
             </div>
         </section>
     </main>
-    <!-- Esto se pude poner en el body tambien -->
+    <!-- Esto hay que ponerlo en el body -->
     <footer>
         <h2>OFFER</h2><!-- esto va aparte -->
         <h1>Subscribe For Get Update Every New Offers</h1><!-- Además, de que no tengo idea de que se supone que dice, esto podría ser un h1 -->
-        <input type="email" placeholder="Enter Your Email Address"> <input type="button" value="Subscribe"><!-- 'Address' se escribe con dos 's' -->
+        <h1><input type="email" placeholder="Enter Your Email Address"> <input type="button" value="Subscribe"></h1><!-- 'Address' se escribe con dos 's' -->
     </footer>
 </body>
 </html>
