--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="/styles/index.css">
 </head>
 <body>
     <!-- El encabezado debe ir todo junto -->
@@ -22,7 +22,7 @@
         <!-- Sección 1: tiene una imagen a la derecha -->
         <section>
             <nav id="home">
-            <h1>Get Delicious Food<span> Instantly Delivered</span></h1> <!-- El mensaje en inglés tenía un error gramatical (¿mantener?) -->
+            <h1>Get Delicious<br> Food<span> Instantly Delivered</span></h1> <!-- El mensaje en inglés tenía un error gramatical (¿mantener?) -->
             <p>La comida rápida al mejor precio...</p>
             </nav>
         </section>
@@ -65,12 +65,32 @@
                 <div class="info Message2"><input type="submit" value="Message"></div> <!-- ponía 'massage' -->
             </div>
         </section>
+        <section class="despedida">
+            <h2>OFFER</h2><!-- esto va aparte -->
+            <h1>Subscribe For Get Update Every New Offers</h1><!-- Además, de que no tengo idea de que se supone que dice, esto podría ser un h1 -->
+            <h1><input type="email" placeholder="Enter Your Email Address"> <input type="button" value="Subscribe"></h1><!-- 'Address' se escribe con dos 's' -->
+        </section>
     </main>
-    <!-- Esto hay que ponerlo en el body -->
     <footer>
-        <h2>OFFER</h2><!-- esto va aparte -->
-        <h1>Subscribe For Get Update Every New Offers</h1><!-- Además, de que no tengo idea de que se supone que dice, esto podría ser un h1 -->
-        <h1><input type="email" placeholder="Enter Your Email Address"> <input type="button" value="Subscribe"></h1><!-- 'Address' se escribe con dos 's' -->
+        <section class="grid_footer">
+            <div>Links</div>
+            <div>Other Link</div>
+            <div>Contact info</div>
+            <div>Home</div>
+            <div>My Account</div>
+            <div>Address: 26 East Fulton Court North Ville MI 48167</div>
+            <div>Menu</div>
+            <div>Track Order</div>
+            <div>Email: InfoExample@gmail.com</div>
+            <div>Gallery</div>
+            <div>Invoice</div>
+            <div>Contact</div>
+            <div>Term & Condition</div>
+            <div>Phone: +111333222</div>
+            <div>Texto</div>
+            <div>Copyright 2023 Restaurant.com All rights reserved</div>
+
+        </section>
     </footer>
 </body>
 </html>
