--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/styles/index.css">
+    <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
     <!-- El encabezado debe ir todo junto -->
@@ -26,25 +26,31 @@
             <p>La comida rápida al mejor precio...</p>
             </nav>
         </section>
+        <hr>
         <!-- Sección 2: Tiene muchos números -->
         <section>
             <div class="grid2">
-            <div class="visitors">180K<br>website visitors</div> <!-- Faltaba la 's' del plural -->
-            <div class="orders">1200+<br>Daily Orders</div>
-            <div class="boys">120+<br>Delivery Boys</div> <!-- Faltaba la 's' del plural -->
-            <div class="exp">12+<br>Years Experience</div>
+            <div class="visitors"><b>180K</b><br><em>website visitors</em></div> <!-- Faltaba la 's' del plural -->
+            <div class="orders"><b>1200+</b><br><em>Daily Orders</em></div>
+            <div class="boys"><b>120+</b><br><em>Delivery Boys</em></div> <!-- Faltaba la 's' del plural -->
+            <div class="exp"><b>12+</b><br><em>Years Experience</em></div>
             </div>
-            <hr>
         </section>
+        <hr>
         <!-- Sección 3: tiene una imagen a la derecha -->
         <section>
-            <nav id="menu">About Us</nav>
-            <p>texto</p> <!-- Escribir párrafos -->
-            <p>texto 2</p>
+            <nav class="grid_about" id="menu">
+            <h1>About Us</h1>
+            <p>Founded in 1983, our mission is simple: to provide mouthwatering meals made with care and served quickly, without compromising on taste. Whether you’re grabbing a burger on the go, indulging in a crispy chicken sandwich, or enjoying our signature loaded fries, you can count on us for a satisfying meal that hits the spot every time.
+            <br>
+            <br>
+            We source only the finest ingredients—locally grown produce, 100% Angus beef, and crispy, golden fries—so you can feel good about every bite. And because we know everyone has their own unique tastes, we offer plenty of options, from vegan-friendly choices to extra-cheese lovers’ specials.</p>
             <input type="button" value="Read More"> <!-- comprobar si el type es correcto -->
+            </nav>
         </section>
+        <hr>
         <!-- Sección 4: tiene una imagen a la izquierda -->
-        <section></section>
+        <section>
             <nav class="Mission" id="services">
             <h1>What Is Our Mission</h1> <!-- Añadido 'Is' -->
             <p>Texto 3</p>
@@ -55,6 +61,7 @@
             </li> 
             </nav>
         </section>
+        <hr>
         <section>
             <!-- hay una imagen a la derecha -->
             <div class="grid3" id="contact">
@@ -65,31 +72,19 @@
                 <div class="info Message2"><input type="submit" value="Message"></div> <!-- ponía 'massage' -->
             </div>
         </section>
-        <section class="despedida">
+        <section>
+            <div class="despedida">
             <h2>OFFER</h2><!-- esto va aparte -->
             <h1>Subscribe For Get Update Every New Offers</h1><!-- Además, de que no tengo idea de que se supone que dice, esto podría ser un h1 -->
             <h1><input type="email" placeholder="Enter Your Email Address"> <input type="button" value="Subscribe"></h1><!-- 'Address' se escribe con dos 's' -->
+            </div>
         </section>
     </main>
     <footer>
         <section class="grid_footer">
-            <div>Links</div>
-            <div>Other Link</div>
-            <div>Contact info</div>
-            <div>Home</div>
-            <div>My Account</div>
-            <div>Address: 26 East Fulton Court North Ville MI 48167</div>
-            <div>Menu</div>
-            <div>Track Order</div>
-            <div>Email: InfoExample@gmail.com</div>
-            <div>Gallery</div>
-            <div>Invoice</div>
-            <div>Contact</div>
-            <div>Term & Condition</div>
-            <div>Phone: +111333222</div>
-            <div>Texto</div>
-            <div>Copyright 2023 Restaurant.com All rights reserved</div>
-
+            <p>
+            Links Other Link Contact info Home My Account Address: 26 East Fulton Court North Ville MI 48167 Menu Track Order Email: InfoExample@gmail.com Gallery Invoice Contact Term & Condition Phone: +111333222 Texto Copyright 2023 Restaurant.com All rights reserved
+            </p>
         </section>
     </footer>
 </body>
