--- a/Pr-ctica/index.html
+++ b/Pr-ctica/index.html
@@ -43,7 +43,7 @@
         <hr>
         <!-- Sección 3: tiene una imagen a la derecha -->
         <section class="grid_about">
-            <img src="images/Aboutsection-picture.png" alt="Pizza">
+            <img src="images/Aboutsection-picture.png" alt="Pizza_margarita">
             <div class="about" id="menu">
             <h1>About Us</h1>
             <p>Founded in 1983, our mission is simple: to provide mouthwatering meals made with care and served quickly, without compromising on taste. Whether you’re grabbing a burger on the go, indulging in a crispy chicken sandwich, or enjoying our signature loaded fries, you can count on us for a satisfying meal that hits the spot every time.
@@ -89,7 +89,8 @@
             <img class="Logo_footer" src="images/Logo.png" alt="Logo2">
             <p class="relleno">Most of these links do not work because we went bankrupt due to the great amount of health-related sanctions. Turns out, our food was garbage and considered a crime against humanity. We hope you did enjoy eating our trash!</p>
         </div>
-        
+
+        <!-- Estos links no funcionan (a propósito)-->
         <div class="footer_links">
             <p><strong>LINKS</strong></p>
             <a href="#">Home</a>
